<resources>
    <string name="app_name">Token Manager</string>

    <!-- Activity Initial Setup -->
    <string name="initial_setup_header">Welcome !!!</string>
    <string name="initial_setup_message">Add Doctor Details and Connectivity Details. Contact representative if you don\'t have the password.</string>
    <string name="initial_setup_doctor_name">Doctor Name</string>
    <string name="initial_setup_doctor_code">Doctor Code</string>
    <string name="initial_setup_hospital_name">Hospital Name</string>
    <string name="initial_setup_display_server_ip">Display Server IP</string>
    <string name="initial_setup_port_id">Display Server Port ID</string>
    <string name="initial_setup_password">Password</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Preferences  -->
    <string name="action_settings">Settings</string>
    <string name="doctor_details">Doctor Details</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="doctor_id">Doctor ID</string>
    <string name="doctor_hospital_name">Hospital Name</string>
    <string name="connectivity_details">Connectivity</string>
    <string name="ip_address">Display IP Address</string>
    <string name="port_id">Port ID</string>

    <!-- Bottom Navigation -->
    <string name="list_all">All</string>
    <string name="list_unattented">Unattented</string>
    <string name="enter_token_number">Token</string>


    <!-- Enter Token Number Dialog -->
    <string name="enter_token_dialog_title">TOKEN NUMBER</string>

</resources>
