<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/initialSetupCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:text="@string/initial_setup_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textSize="30sp"
                android:textColor="@color/colorPrimary" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:text="@string/initial_setup_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewx"
                android:textSize="16sp"
                android:textColor="@color/colorAccent" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:text="@string/initial_setup_doctor_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:fontFamily="sans-serif-smallcaps"
                android:textStyle="normal|bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/initial_setup_doctor_name" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:text="@string/initial_setup_doctor_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:fontFamily="sans-serif-smallcaps"
                android:textStyle="normal|bold"  />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/initial_setup_doctor_code" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:text="@string/initial_setup_hospital_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:fontFamily="sans-serif-smallcaps"
                android:textStyle="normal|bold"  />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/initial_setup_hospital_name" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:text="@string/initial_setup_display_server_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:fontFamily="sans-serif-smallcaps"
                android:textStyle="normal|bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/initial_setup_display_server_ip"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:text="@string/initial_setup_port_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:id="@+id/textView7"
                android:textSize="16sp"
                android:fontFamily="sans-serif-smallcaps"
                android:textStyle="normal|bold"  />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/initial_setup_port_id"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:text="@string/initial_setup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:id="@+id/textView8"
                android:textSize="16sp"
                android:fontFamily="sans-serif-smallcaps"
                android:textStyle="normal|bold"  />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/initial_setup_password"
                android:hint="@string/initial_setup_password" />

            <Button
                android:text="NEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@drawable/next_button_ripple"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/next_button" />

            <Button
                android:text="CANCEL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@drawable/cancel_button_ripple"
                android:textColor="@color/colorAccent"
                android:id="@+id/cancel_button" />
        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>

